[package]
name = "rln-migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "rln_migration"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", default-features = false, features = [
    "macros",
    "rt-multi-thread",
] }
sea-orm-migration = { version = "1.1.19", default-features = false, features = [
    "cli",
    "runtime-tokio-rustls",
    "sqlx-postgres",
    "sqlx-sqlite",
] }
